# skypro_2nd_module

./: .env.example  .flake8  README.md  main.py  pyproject.toml
data/: transactions.csv  transactions_excel.xlsx
src/: decorators.py  external_api.py  fileio.py  generators.py  loggers.py  masks.py  processing.py  tools.py  ui.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_loggers.py  test_masks.py  test_processing.py  test_tools.py  test_ui.py  test_utils.py  test_widget.py
