[tool.poetry]
name = "homework"
version = "0.3.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.10.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.git
  )/
)
'''

[tool.isort]
line_length = 119