[tool.poetry]
name = "homework"
version = "0.10.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.10.1"
black = "^24.4.2"
types-requests = "^2.32.0.20240712"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
logging = "^0.4.9.6"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pandas-stubs = "^2.2.2.240807"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.git
  )/
)
'''

[tool.isort]
line_length = 119